# tiny_vulkan

./: CMakeDeps.cmake  CMakeLists.txt
scripts/: vs2019-config.bat  vs2026-config.bat
src/: TinyPch.h
src/Core/: Application.cpp  Application.h  Filesystem.cpp  Filesystem.h  LifetimeManager.cpp  LifetimeManager.h  LogSystem.cpp  LogSystem.h  tinyFilesystem.cpp  tinyFilesystem.h
src/EntryPoint/: main.cpp
src/EntryPoint/Assets/: Compute.comp  sky.comp
src/EntryPoint/Assets/Shaders/: fragmentShader.frag  triangleF.frag  triangleV.vert  vertexShader.vert
src/Vulkan/: RendererData.cpp  RendererData.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCore.cpp  VulkanCore.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanFrame.cpp  VulkanFrame.h  VulkanImage.cpp  VulkanImage.h  VulkanLoader.cpp  VulkanLoader.h  VulkanPipelines.cpp  VulkanPipelines.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.cpp  VulkanSync.h  VulkanTransfer.cpp  VulkanTransfer.h  VulkanUtils.h
src/Vulkan/Assets/: AssetLoader.cpp  AssetLoader.h  Mesh.cpp  Mesh.h
src/Vulkan/Commands/: CommandsExecutor.cpp  CommandsExecutor.h  ImageOperations.cpp  ImageOperations.h  VulkanSynchronization.cpp  VulkanSynchronization.h
src/Vulkan/Core/: VulkanCore.cpp  VulkanCore.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/Vulkan/ImGui/: ImGuiRenderer.cpp  ImGuiRenderer.h
src/Vulkan/Pipeline/: DescriptorSetLayout.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanShader.cpp  VulkanShader.h
src/Vulkan/Renderer/: Scene.cpp  Scene.h  VulkanFrame.cpp  VulkanFrame.h  VulkanRenderer.cpp  VulkanRenderer.h
src/Vulkan/Renderer/ImGui/: ImGuiRenderer.cpp  ImGuiRenderer.h
src/Vulkan/Resources/: DescriptorSetLayout.cpp  DescriptorSetLayout.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanImage.cpp  VulkanImage.h
src/Window/: Window.cpp  Window.h
